--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="header"><div class="titlecenter">CANVASSER</div></div>
     <br>
-    <a href="./author/samples.php">Samples</a><br>
+    <a href="./author/samples.html">Samples</a><br>
     <br>
     <a href="./author/author.php">Authoring Tool</a><br>
   </body>
