--- a/test/testapi.html
+++ b/test/testapi.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>API Reference</title>
     <link rel="shortcut icon" href="../favicon.ico" />
-    <script src="./author/js/testapi.js" type="text/javascript"></script>
-    <link href="./author/css/normalize.css" rel="stylesheet" type="text/css"/>
-    <link href="./author/css/testapi.css"   rel="stylesheet" type="text/css"/>
+    <script src="../author/js/testapi.js" type="text/javascript"></script>
+    <link href="../author/css/normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="../author/css/testapi.css"   rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div id="title">Canvasser API</div>
@@ -19,6 +19,11 @@
     <div class="testholder">
       <div class="button_load" onclick="apiGet('allFilesOfATypeInAllProjects')">GET</div>
       <div class="label">all of a type in all projects ./api/v1/files?type=<input class="input" type="text"  placeholder="{type}"" id="getalloftype"></div>
+    </div>
+
+    <div class="testholder">
+      <div class="button_load" onclick="apiGet('allProjects')">GET</div>
+      <div class="label">all projects ./api/v1/projects/</div>
     </div>
 
     <div class="testholder">
